# argus

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/argus/: Cargo.toml
crates/argus-browser/: Cargo.toml  sample_image.txt
crates/argus-browser/src/: lib.rs  store.rs  tabbar.rs
crates/argus-compositor/: Cargo.toml
crates/argus-compositor/src/: lib.rs
crates/argus-content/: Cargo.toml
crates/argus-content/src/: dom_script.rs  lib.rs
crates/argus-css/: Cargo.toml
crates/argus-css/src/: lib.rs  selector.rs  tokenizer.rs  value.rs
crates/argus-dom/: Cargo.toml
crates/argus-dom/src/: lib.rs  name.rs  serialize.rs
crates/argus-domscript/: Cargo.toml
crates/argus-domscript/src/: lib.rs
crates/argus-geometry/: Cargo.toml
crates/argus-geometry/src/: color.rs  lib.rs  rect.rs
crates/argus-gfx/: Cargo.toml
crates/argus-gfx/src/: lib.rs
crates/argus-html/: Cargo.toml
crates/argus-html/src/: entities.rs  lib.rs  tokenizer.rs  tree_builder.rs
crates/argus-html/tests/: html5lib_tree_construction.rs  tokenizer_conformance.rs
crates/argus-image/: Cargo.toml
crates/argus-image/src/: lib.rs  woff2.rs
crates/argus-ipc/: Cargo.toml
crates/argus-ipc/src/: channel.rs  lib.rs  shm.rs  sys.rs
crates/argus-layout/: Cargo.toml
crates/argus-layout/src/: arabic.rs  bidi.rs  lib.rs
crates/argus-platform/: Cargo.toml
crates/argus-platform/src/: lib.rs  process.rs  sandbox.rs  window.rs
crates/argus-protocol/: Cargo.toml
crates/argus-protocol/src/: lib.rs
crates/argus-script/: Cargo.toml
crates/argus-script/src/: lib.rs
crates/argus-services/: Cargo.toml
crates/argus-services/src/: lib.rs
crates/argus-style/: Cargo.toml
crates/argus-style/src/: lib.rs
crates/argus-style/tests/: cascade_conformance.rs
crates/argus-util/: Cargo.toml
crates/argus-util/src/: id.rs  lib.rs  log.rs  role.rs
crates/argus/src/: main.rs
crates/argus/tests/: phase0.rs
docs/: ARCHITECTURE.md  GLOSSARY.md  PROCESS_MODEL.md  ROADMAP.md
docs/subsystems/: README.md  dom.md  embedding.md  layout.md  media.md  navigation.md  networking.md  rendering.md  scripting.md  security.md  storage.md  style.md
docs/upstream/: README.md  kataan.md  oxideav.md  rsurl.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: css.rs  html.rs  image.rs  layout.rs
