[package]
name = "argus-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argus-util.workspace = true
argus-ipc.workspace = true
argus-protocol.workspace = true
argus-platform.workspace = true
argus-compositor.workspace = true
argus-geometry.workspace = true
argus-html.workspace = true
argus-dom.workspace = true

[lints]
workspace = true
