[package]
name = "argus-domscript"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argus-dom.workspace = true
argus-html.workspace = true
argus-css.workspace = true
argus-script.workspace = true
purecrypto = "0.6.11"

[lints]
workspace = true
