[package]
name = "argus-image"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxideav-png = "0.1"
oxideav-gif = "0.0"
oxideav-webp = "0.2"
oxideav-vp8 = "0.2"
oxideav-mjpeg = "0.1"
oxideav-qoi = "0.0"
oxideav-ico = "0.0"
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"
compcol = "0.6"

[lints]
workspace = true
