[package]
name = "argus-image"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oxideav-png = "0.1"
oxideav-gif = "0.0"
oxideav-webp = "0.2"
oxideav-vp8 = "0.2"
oxideav-av1 = "0.1.12"
oxideav-avif = "0.0"
oxideav-h264 = "0.1.5"
oxideav-vp9 = "0.0.11"
oxideav-mp4 = "0.0.8"
oxideav-mkv = "0.0.8"
oxideav-mjpeg = "0.1"
oxideav-qoi = "0.0"
oxideav-ico = "0.0"
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"
compcol = { version = "0.6", features = ["brotli"] }

[lints]
workspace = true
