[package]
name = "argus-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argus-dom.workspace = true
argus-style.workspace = true
argus-css.workspace = true
argus-gfx.workspace = true
argus-geometry.workspace = true

[dev-dependencies]
argus-html.workspace = true

[lints]
workspace = true
