[package]
name = "argus-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argus-util.workspace = true
argus-ipc.workspace = true
libc.workspace = true

[lints]
workspace = true
