[package]
name = "argus-services"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argus-util.workspace = true
argus-ipc.workspace = true
argus-protocol.workspace = true
rsurl = "0.0.9"

[lints]
workspace = true
